RESOLVED FIXED218853
[LFC][IFC] FormattingContext::Geometry::computedHeightValue should handle min, max and fit-content
https://bugs.webkit.org/show_bug.cgi?id=218853
Summary [LFC][IFC] FormattingContext::Geometry::computedHeightValue should handle min...
alan
Reported 2020-11-12 09:45:50 PST
it's really just avoiding the assertion is valueForLength
Attachments
Patch (1.79 KB, patch)
2020-11-12 09:48 PST, alan
no flags
alan
Comment 1 2020-11-12 09:48:51 PST
EWS
Comment 2 2020-11-12 10:47:13 PST
Committed r269744: <https://trac.webkit.org/changeset/269744> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413945 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-12 10:48:19 PST
Note You need to log in before you can comment on or make changes to this bug.