[LFC][IFC] FormattingContext::Geometry::computedHeightValue should handle min, max and fit-content https://bugs.webkit.org/show_bug.cgi?id=218853

Reviewed by Antti Koivisto.

This is not an actual support for those height values (that's something the caller needs to implement),
it's just avoiding the assertion in valueForLength.

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::computedHeightValue const):


Canonical link: https://commits.webkit.org/231519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269744 268f45cc-cd09-0410-ab3c-d52691b4dbfc